# three

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml  index.html
assets/: manifest.json
src/: app.rs  lib.rs  main.rs
src/back/: mod.rs  posts.rs  qrcode.rs  user.rs
src/front/: app.rs  mod.rs  qrcode.rs  screen.rs
