[package]
name = "three"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
bytes = "1.10.0"
data-encoding = "2.8.0"
ed25519-dalek = "2.1.1"
eframe = { version = "0.31.0", features = [
  "default_fonts",
  "glow",
  "persistence",
] }
egui = "0.31.0"
env_logger = "0.11.6"
futures-lite = "2.6.0"
iroh = { version = "0.33.0", default-features = false }
iroh-base = { version = "0.33", default-features = false, features = [
  "ticket",
] }
iroh-blobs = { version = "0.33.0", features = ["rpc"] }
iroh-gossip = { version = "0.33.0", default-features = false, features = [
  "net",
] }
log = "0.4.26"
postcard = "1.1.1"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
image = "0.24.9"
qrc = "0.0.5"
tokio = { version = "1.43.0", features = ["full"] }
bardecoder = "0.5.0"
