[package]
name = "three"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
async-channel = "2.3.1"
bardecoder = "0.5.0"
bytes = "1.10.0"
clap = { version = "4.5.30", features = ["derive"] }
console_error_panic_hook = "0.1.7"
data-encoding = "2.8.0"
dirs = "6.0.0"
ed25519-dalek = "2.1.1"
eframe = { version = "0.31.0", features = [
  "default_fonts",
  "glow",
  "persistence",
] }
egui = "0.31.0"
env_logger = "0.11.6"
futures-lite = "2.6.0"
iced = { version = "0.13.1", features = ["tokio"] }
image = "0.24.9"
iroh = { version = "0.33.0", default-features = false }
iroh-base = { version = "0.33", default-features = false, features = [
  "ticket",
] }
iroh-blobs = { version = "0.33.0", features = ["rpc"] }
iroh-gossip = { version = "0.33.0", default-features = false, features = [
  "net",
] }
log = "0.4.26"
postcard = "1.1.1"
qrc = "0.0.5"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
